--- a/election-backend/Dockerfile
+++ b/election-backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /usr/src/app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-# Install all dependencies (including dev dependencies like prisma and typescript)
+# Install all dependencies
 RUN npm install
 
 # Copy the rest of the application source code
