--- a/election-backend/package.json
+++ b/election-backend/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "deploy": "npm run build && npx prisma migrate deploy && npm start",
+    "deploy": "npx prisma migrate deploy && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,22 +18,29 @@
   "license": "ISC",
   "description": "Backend API for Election Application",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.14.9",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.0.3",
-    "ws": "^8.18.0"
+    "prisma": "^5.16.1",
+    "socket.io": "^4.7.5",
+    "typescript": "^5.5.2",
+    "uuid": "^9.0.1",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/morgan": "^1.9.10",
-    "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.13",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2"
   }
 }
