--- a/election-backend/package.json
+++ b/election-backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "deploy": "npx prisma migrate deploy && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
